implement StaticContainer class

--- a/3term/lab1/CMakeLists.txt
+++ b/3term/lab1/CMakeLists.txt
@@ -3,4 +3,18 @@ project(lab1)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(lab1 src/main.cpp)
+# source files
+set(SOURCE_FILES
+    src/main.cpp
+    include/DataStructures/StaticContainer.hpp
+    include/DataStructures/DynamicContainer.hpp
+    include/DataStructures/SortedContainer.hpp
+    include/DataStructures/Array.hpp)
+
+# include directories
+include_directories(
+    "${PROJECT_SOURCE_DIR}/include/DataStructures"
+    ${SFML_INCLUDE_DIR}
+)
+
+add_executable(${PROJECT_NAME} ${SOURCE_FILES})
