--- a/3term/algorithm_theory_course/lab1/CMakeLists.txt
+++ b/3term/algorithm_theory_course/lab1/CMakeLists.txt
@@ -3,4 +3,10 @@ project(lab1)
 
 set(CMAKE_CXX_STANDARD 20)
 
+# include directories
+include_directories(
+    "${PROJECT_SOURCE_DIR}/include"
+    ${SFML_INCLUDE_DIR}
+)
+
 add_executable(lab1 src/main.cpp include/Tape.hpp src/Tape.cpp)
