implement popNode. work on googletest

--- a/3term/oop/lab1/CMakeLists.txt
+++ b/3term/oop/lab1/CMakeLists.txt
@@ -8,8 +8,7 @@ include_directories(lib/googletest-master/googletest/include)
 include_directories(lib/googletest-master/googlemock/include)
 
 # source files
-set(SOURCE_FILES
-    src/main.cpp
+set(HEADER_FILES
     include/DataStructures/StaticContainer.hpp
     include/DataStructures/DynamicContainer.hpp
     include/DataStructures/SortedContainer.hpp
@@ -17,7 +16,12 @@ set(SOURCE_FILES
     include/DataStructures/MatrixGraph.hpp
     include/DataStructures/Graph.hpp
     include/DataStructures/ListGraph.hpp
-        tests/test.cpp tests/ClassName.hpp)
+)
+
+set(SOURCE_FILES
+    src/main.cpp
+    tests/MatrixGraphFixture.cpp tests/ListGraphFixture.cpp
+)
 
 # include directories
 include_directories(
@@ -25,7 +29,7 @@ include_directories(
     ${SFML_INCLUDE_DIR}
 )
 
-add_executable(${PROJECT_NAME} ${SOURCE_FILES})
+add_executable(${PROJECT_NAME} ${HEADER_FILES} ${SOURCE_FILES})
 
 # link libraries
 target_link_libraries(${PROJECT_NAME} gtest gtest_main)
