--- a/3term/database/lab1/CMakeLists.txt
+++ b/3term/database/lab1/CMakeLists.txt
@@ -3,4 +3,19 @@ project(lab1 C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(lab1 src/main.c)
+include_directories(
+    include
+    include/structs
+)
+
+# set HEADER FILES
+set(HEADER_FILES
+    include/functions.h
+)
+
+# set SOURCE FILES
+set(SOURCE_FILES
+    src/main.c
+    src/functions.c include/structs/person.h)
+
+add_executable(lab1 ${SOURCE_FILES})
