implement Random class. work on FileSystem class

--- a/3term/oop/lab1/CMakeLists.txt
+++ b/3term/oop/lab1/CMakeLists.txt
@@ -13,19 +13,20 @@ set(HEADER_FILES
     include/DataStructures/DynamicContainer.hpp
     include/DataStructures/SortedContainer.hpp
     include/DataStructures/Array.hpp
-    include/DataStructures/MatrixGraph.hpp
-    include/DataStructures/Graph.hpp
-    include/DataStructures/ListGraph.hpp
+        include/DataStructures/Graphs/MatrixGraph.hpp
+        include/DataStructures/Graphs/Graph.hpp
+        include/DataStructures/Graphs/ListGraph.hpp
 )
 
 set(SOURCE_FILES
     src/main.cpp
     tests/MatrixGraphFixture.cpp tests/ListGraphFixture.cpp
-)
+        include/FileSystem/File.hpp include/DateTime/Date.hpp include/DateTime/Time.hpp include/FileSystem/Directory.hpp include/FileSystem/FileSystemObject.hpp include/DataStructures/Trees/GeneralTree.hpp include/Random/Random.hpp include/FileSystem/FileSystem.hpp src/FileSystem/FileSystem.cpp src/FileSystem/File.cpp src/FileSystem/FileSystemObject.cpp src/FileSystem/Directory.cpp)
 
 # include directories
 include_directories(
-    "${PROJECT_SOURCE_DIR}/include/DataStructures"
+    include
+    /include/DataStructures
     ${SFML_INCLUDE_DIR}
 )
 
