--- a/3term/algorithms/lab4/CMakeLists.txt
+++ b/3term/algorithms/lab4/CMakeLists.txt
@@ -11,12 +11,14 @@ include_directories(
 set(HEADER_FILES
     include/Lab4/Solution.hpp
     include/Lab4/Random.hpp
+        include/Lab4/ConsoleColor.hpp
 )
 
 # source files
 set(SOURCE_FILES
     src/main.cpp
     src/Solution.cpp
+        src/ConsoleColor.cpp
 )
 
 add_executable(${PROJECT_NAME} ${HEADER_FILES} ${SOURCE_FILES})
