--- a/3term/algorithms/lab4/CMakeLists.txt
+++ b/3term/algorithms/lab4/CMakeLists.txt
@@ -18,7 +18,7 @@ set(HEADER_FILES
 set(SOURCE_FILES
     src/main.cpp
     src/ConsoleColor.cpp
-)
+        src/Benchmark.hpp)
 
 add_executable(${PROJECT_NAME} ${HEADER_FILES} ${SOURCE_FILES})
 
