add Ng::Strassen file

--- a/3term/algorithms/lab5/CMakeLists.txt
+++ b/3term/algorithms/lab5/CMakeLists.txt
@@ -10,7 +10,7 @@ include_directories(
 # header files
 set(HEADER_FILES
     src/Matrix.hpp
-)
+        src/Strassen.hpp)
 
 # source files
 set(SOURCE_FILES
