work on Ng::Stassen. Add Ng::Matrix::(PopRow, PopColumn, Clean)

--- a/3term/algorithms/lab5/CMakeLists.txt
+++ b/3term/algorithms/lab5/CMakeLists.txt
@@ -10,11 +10,13 @@ include_directories(
 # header files
 set(HEADER_FILES
     src/Matrix.hpp
-        src/Strassen.hpp)
+    src/Strassen.hpp
+    src/Random.hpp
+)
 
 # source files
 set(SOURCE_FILES
     src/main.cpp
-        src/Random.hpp)
+)
 
 add_executable(${PROJECT_NAME} ${HEADER_FILES} ${SOURCE_FILES})
