--- a/3term/algorithms/lab6/CMakeLists.txt
+++ b/3term/algorithms/lab6/CMakeLists.txt
@@ -3,4 +3,15 @@ project(lab6)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(lab6 src/main.cpp)
+set(HEADER_FILES
+
+)
+
+set(SOURCE_FILES
+    src/main.cpp
+        src/IsCyclical.cpp src/IsCyclical.hpp)
+
+# include directories
+include_directories(src)
+
+add_executable(${PROJECT_NAME} ${HEADER_FILES} ${SOURCE_FILES})
