--- a/3term/algorithms/lab7/CMakeLists.txt
+++ b/3term/algorithms/lab7/CMakeLists.txt
@@ -4,11 +4,13 @@ project(lab7)
 set(CMAKE_CXX_STANDARD 20)
 
 set(HEADER_FILES
-        src/Matrix/Matrix.hpp)
+    src/Matrix/Matrix.hpp
+    src/Algorithms/RabinKarp.hpp
+)
 
 set(SOURCE_FILES
     src/main.cpp
-)
+        src/Algorithms/RabinKarp.cpp)
 
 include_directories(src)
 
