--- a/3term/algorithms/lab6/CMakeLists.txt
+++ b/3term/algorithms/lab6/CMakeLists.txt
@@ -4,12 +4,14 @@ project(lab6)
 set(CMAKE_CXX_STANDARD 20)
 
 set(HEADER_FILES
-
+    src/Random.hpp
+    src/Random.hpp
 )
 
 set(SOURCE_FILES
     src/main.cpp
-        src/IsCyclical.cpp src/IsCyclical.hpp src/Random.hpp src/Random.hpp)
+    src/IsCyclical.cpp
+)
 
 # include directories
 include_directories(src)
