--- a/3term/oop/project/CMakeLists.txt
+++ b/3term/oop/project/CMakeLists.txt
@@ -9,6 +9,8 @@ set(CMAKE_CUDA_STANDARD 14)
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/Modules" ${CMAKE_MODULE_PATH})
 find_package(SFML 2.5.1 COMPONENTS network window graphics system REQUIRED)
 
+find_package(CUDAToolkit REQUIRED)
+
 #find_package(Boost 1.74.0 COMPONENTS  REQUIRED)
 
 # multi threading
@@ -25,7 +27,6 @@ set(CXX_HEADER_FILES
     src/States/MainMenuState.hpp
     src/Gui/Button.cpp
     src/States/FluidState.hpp
-    src/Simulations/FluidSimulation/FluidPlane.hpp
         src/Random/Random.hpp)
 
 # source files
@@ -43,11 +44,13 @@ set(CXX_SOURCE_FILES
 )
 
 set(CUDA_HEADER_FILES
-
+    src/Simulations/FluidSimulation/Fluid.cuh
+    src/Simulations/FluidSimulation/Kernel.cuh
 )
 
 SET(CUDA_SOURCE_FILES
-        src/Simulations/FluidSimulation/FluidPlane.cu
+    src/Simulations/FluidSimulation/Fluid.cu
+    src/Simulations/FluidSimulation/Kernel.cu
 )
 
 set_source_files_properties(src/Simulations/FluidSimulation/FluidPlane.cu PROPERTIES LANGUAGE "CUDA")
@@ -55,7 +58,7 @@ set_source_files_properties(src/Simulations/FluidSimulation/FluidPlane.cu PROPER
 include_directories(src ${SFML_INCLUDE_DIR})
 
 add_executable(${PROJECT_NAME} ${CXX_HEADER_FILES} ${CXX_SOURCE_FILES} ${CUDA_SOURCE_FILES})
-target_link_libraries(${PROJECT_NAME} ${SFML_LIBRARIES} ${SFML_DEPENDENCIES})
+target_link_libraries(${PROJECT_NAME} ${SFML_LIBRARIES} ${SFML_DEPENDENCIES} CUDA::cudart)
 
 set_target_properties(
     ${PROJECT_NAME}
