--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "3term/Algorithms/lab7/lib/Random"]
 	path = 3term/Algorithms/lab7/lib/Random
 	url = https://github.com/NavkaGleb/Random
+[submodule "Term4/Algorithms/Lab01/lib/Random"]
+	path = Term4/Algorithms/Lab01/lib/Random
+	url = https://github.com/NavkaGleb/Random
