--- a/Term4/Algorithms/Lab01/CMakeLists.txt
+++ b/Term4/Algorithms/Lab01/CMakeLists.txt
@@ -3,4 +3,19 @@ project(Lab01)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(Lab01 src/main.cpp)
+include_directories(src)
+
+# NgRandom library
+add_subdirectory(lib/Random)
+
+file(GLOB HEADER_FILES
+    src/*.hpp
+)
+
+file(GLOB SOURCE_FILES
+    src/*.cpp
+)
+
+add_executable(${PROJECT_NAME} ${HEADER_FILES} ${SOURCE_FILES})
+
+target_link_libraries(${PROJECT_NAME} NgRandom)
