--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "Term4/Algorithms/Lab02/lib/Random"]
 	path = Term4/Algorithms/Lab02/lib/Random
 	url = https://github.com/NavkaGleb/Random
+[submodule "Term4/Algorithms/Lab03/lib/Random"]
+	path = Term4/Algorithms/Lab03/lib/Random
+	url = https://github.com/NavkaGleb/Random
