--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "Term4/Algorithms/Lab03/lib/Random"]
 	path = Term4/Algorithms/Lab03/lib/Random
 	url = https://github.com/NavkaGleb/Random
+[submodule "Term4/OOP/Lab01/RefactoredProject/lib/Random"]
+	path = Term4/OOP/Lab01/RefactoredProject/lib/Random
+	url = https://github.com/NavkaGleb/Random
