Implement base commands for locations in InteractiveMode. Working on Monsters in InteractiveMode

--- a/Term4/OOP/Lab01/RefactoredProject/CMakeLists.txt
+++ b/Term4/OOP/Lab01/RefactoredProject/CMakeLists.txt
@@ -19,6 +19,10 @@ file(GLOB SOURCE_FILES
     src/*.cpp
 )
 
+add_subdirectory(lib/Random)
+
 include_directories(src)
 
 add_executable(${PROJECT_NAME} ${HEADER_FILES} ${SOURCE_FILES})
+
+target_link_libraries(${PROJECT_NAME} NgRandom)
