--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "Term4/OOP/Lab01/RefactoredProject/lib/Random"]
 	path = Term4/OOP/Lab01/RefactoredProject/lib/Random
 	url = https://github.com/NavkaGleb/Random
+[submodule "Term4/Algorithms/Lab04/lib/Random"]
+	path = Term4/Algorithms/Lab04/lib/Random
+	url = https://github.com/NavkaGleb/Random
