--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "Term4/Algorithms/Lab04/lib/Random"]
 	path = Term4/Algorithms/Lab04/lib/Random
 	url = https://github.com/NavkaGleb/Random
+[submodule "Term4/Algorithms/Lab04/lib/libfort"]
+	path = Term4/Algorithms/Lab04/lib/libfort
+	url = https://github.com/seleznevae/libfort
