Algorithms/Lab06: Separate BPlusNode header file. Try to fix bug in deletion

--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "Term4/Algorithms/Lab06/external/Random"]
 	path = Term4/Algorithms/Lab06/external/Random
 	url = https://github.com/NavkaGleb/Random
+[submodule "Term4/Algorithms/Lab06/external/doctest"]
+	path = Term4/Algorithms/Lab06/external/doctest
+	url = https://github.com/onqtam/doctest
