Algorithms/Lab08: Implement FibonacciHeap(Push, PopPeak) methods

--- a/Term4/Algorithms/Lab08/CMakeLists.txt
+++ b/Term4/Algorithms/Lab08/CMakeLists.txt
@@ -3,4 +3,8 @@ project(Lab08)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(Lab08 src/Main.cpp)
+add_subdirectory(external/Random)
+add_subdirectory(external/doctest)
+
+add_subdirectory(src)
+add_subdirectory(tests)
