Algorithms/Lab05: Add PersistentNode & PersistentTree class. Implement base

--- a/Term4/Algorithms/Lab05/CMakeLists.txt
+++ b/Term4/Algorithms/Lab05/CMakeLists.txt
@@ -3,5 +3,8 @@ project(Lab05)
 
 set(CMAKE_CXX_STANDARD 20)
 
+add_subdirectory(extern/Random)
+add_subdirectory(extern/doctest)
+
 add_subdirectory(src)
 add_subdirectory(tests)
