--- a/Term4/Algorithms/Lab05/src/CMakeLists.txt
+++ b/Term4/Algorithms/Lab05/src/CMakeLists.txt
@@ -1,6 +1,6 @@
-set(EXECUTABLE_NAME ${PROJECT_NAME})
+set(TARGET ${PROJECT_NAME})
 
 file(GLOB HEADER_FILES ./*.hpp ./*.inl)
 file(GLOB SOURCE_FILES ./*.cpp)
 
-add_executable(${EXECUTABLE_NAME} ${HEADER_FILES} ${SOURCE_FILES})
+add_executable(${TARGET} ${HEADER_FILES} ${SOURCE_FILES})
