--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,9 @@
 [submodule "Term4/Algorithms/Lab08/external/doctest"]
 	path = Term4/Algorithms/Lab08/external/doctest
 	url = https://github.com/onqtam/doctest
+[submodule "Term4/Algorithms/Lab05/extern/Random"]
+	path = Term4/Algorithms/Lab05/extern/Random
+	url = https://github.com/NavkaGleb/Random
+[submodule "Term4/Algorithms/Lab05/extern/doctest"]
+	path = Term4/Algorithms/Lab05/extern/doctest
+	url = https://github.com/onqtam/doctest
