Algorthms/Lab09: Implement Dijkstra & BellmanFord & Johnson algorithms

--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule "Term4/Algorithms/Lab09/External/doctest"]
 	path = Term4/Algorithms/Lab09/External/doctest
 	url = https://github.com/onqtam/doctest
+[submodule "Term4/Algorithms/Lab09/External/libfort"]
+	path = Term4/Algorithms/Lab09/External/libfort
+	url = https://github.com/seleznevae/libfort
