--- a/Term4/Algorithms/Lab09/Tests/CMakeLists.txt
+++ b/Term4/Algorithms/Lab09/Tests/CMakeLists.txt
@@ -2,6 +2,8 @@ set(TARGET Lab09_Tests)
 
 file(GLOB SOURCE_FILES ./*.cpp)
 
+include_directories(${PROJECT_SOURCE_DIR}/Source)
+
 add_executable(${TARGET} ${SOURCE_FILES})
 
-target_link_libraries(${TARGET} PRIVATE NgRandom doctest_with_main)
+target_link_libraries(${TARGET} PRIVATE NgRandom doctest_with_main fort)
