--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,6 @@
 [submodule "Term4/Algorithms/Lab09/External/libfort"]
 	path = Term4/Algorithms/Lab09/External/libfort
 	url = https://github.com/seleznevae/libfort
+[submodule "Term4/OOP/Lab03/External/Ziben"]
+	path = Term4/OOP/Lab03/External/Ziben
+	url = https://github.com/NavkaGleb/Ziben
