--- a/Term4/OOP/Lab03/CMakeLists.txt
+++ b/Term4/OOP/Lab03/CMakeLists.txt
@@ -4,5 +4,7 @@ project(Lab03)
 set(CMAKE_CXX_STANDARD 20)
 
 add_subdirectory(External/Ziben)
+add_subdirectory(External/doctest)
 
 add_subdirectory(Source)
+add_subdirectory(Tests)
