--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,6 @@
 [submodule "Term4/OOP/Lab03/External/benchmark"]
 	path = Term4/OOP/Lab03/External/benchmark
 	url = https://github.com/google/benchmark
+[submodule "Term5/os/lab1/third_party/asio"]
+	path = Term5/os/lab1/third_party/asio
+	url = https://github.com/boostorg/asio
