--- a/Term5/os/lab1/src/CMakeLists.txt
+++ b/Term5/os/lab1/src/CMakeLists.txt
@@ -5,4 +5,4 @@ file(GLOB_RECURSE SOURCE_FILES ./*.cpp)
 
 add_executable(${TARGET} ${HEADER_FILES} ${SOURCE_FILES} computation_function.hpp nonblocking_read_poll.hpp nonblocking_read_poll.cpp keyboard.cpp keyboard.hpp)
 
-target_link_libraries(${TARGET} PRIVATE ncurses)
+target_link_libraries(${TARGET} PRIVATE ncurses Ng::Random)
