--- a/Term5/os/lab1/CMakeLists.txt
+++ b/Term5/os/lab1/CMakeLists.txt
@@ -3,7 +3,7 @@ project(lab1)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_subdirectory(third_party/Random)
+add_subdirectory(third_party)
 
 add_subdirectory(src)
-add_subdirectory(test)
+add_subdirectory(tests)
