term5/os/lab2: Implement skeleton of Java SchdulingSimulator

--- a/term5/os/lab2/src/CMakeLists.txt
+++ b/term5/os/lab2/src/CMakeLists.txt
@@ -4,3 +4,5 @@ file(GLOB_RECURSE HEADER_FILES *.hpp *.inl)
 file(GLOB_RECURSE SOURCE_FILES *.cpp)
 
 add_executable(${TARGET} ${HEADER_FILES} ${SOURCE_FILES})
+
+target_link_libraries(${TARGET} PRIVATE ng::random)
