--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "Term5/os/lab1/third_party/Random"]
 	path = term5/os/lab1/third_party/Random
 	url = https://github.com/navkagleb/Random
+[submodule "term5/os/lab2/third_party/ng-random"]
+	path = term5/os/lab2/third_party/ng-random
+	url = https://github.com/navkagleb/ng-random
