term5/os/lab2: Add tabulate library. Refactor SchedulingAlgorithm from std::function to struct

--- a/term5/os/lab2/src/CMakeLists.txt
+++ b/term5/os/lab2/src/CMakeLists.txt
@@ -5,4 +5,4 @@ file(GLOB_RECURSE SOURCE_FILES *.cpp)
 
 add_executable(${TARGET} ${HEADER_FILES} ${SOURCE_FILES})
 
-target_link_libraries(${TARGET} PRIVATE ng::random)
+target_link_libraries(${TARGET} PRIVATE ng::random tabulate)
