--- a/.gitmodules
+++ b/.gitmodules
@@ -73,3 +73,6 @@
 [submodule "term5/os/lab2/third_party/ng-random"]
 	path = term5/os/lab2/third_party/ng-random
 	url = https://github.com/navkagleb/ng-random
+[submodule "term5/os/lab2/third_party/tabulate"]
+	path = term5/os/lab2/third_party/tabulate
+	url = https://github.com/p-ranav/tabulate
