term5/os/lab2: Refactor project structure. Remove scheduler-simulator lib

--- a/term5/os/lab2/src/CMakeLists.txt
+++ b/term5/os/lab2/src/CMakeLists.txt
@@ -5,4 +5,6 @@ file(GLOB_RECURSE SOURCE_FILES *.cpp)
 
 add_executable(${TARGET} ${HEADER_FILES} ${SOURCE_FILES})
 
-target_link_libraries(${TARGET} PRIVATE scheduler_simulator)
+target_link_libraries(${TARGET} PRIVATE ng::random nlohmann_json tabulate)
+
+target_include_directories(${TARGET} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
