--- a/term5/os/lab2/src/CMakeLists.txt
+++ b/term5/os/lab2/src/CMakeLists.txt
@@ -8,3 +8,5 @@ add_executable(${TARGET} ${HEADER_FILES} ${SOURCE_FILES})
 target_link_libraries(${TARGET} PRIVATE ng::random nlohmann_json tabulate)
 
 target_include_directories(${TARGET} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+
+set(CMAKE_CXX_FLAGS "-static-libstdc++")
