--- a/.gitmodules
+++ b/.gitmodules
@@ -79,3 +79,9 @@
 [submodule "term5/os/lab2/third_party/scheduler-simulator/third_party/json"]
 	path = term5/os/lab2/third_party/json
 	url = https://github.com/nlohmann/json
+[submodule "term5/dc/lab6/third_party/ng-random"]
+	path = term5/dc/lab6/third_party/ng-random
+	url = https://github.com/navkagleb/ng-random
+[submodule "term5/dc/lab6/third_party/tabulate"]
+	path = term5/dc/lab6/third_party/tabulate
+	url = https://github.com/p-ranav/tabulate
