Remove unnecessary files

--- a/term7/functional_programming/lab1/package.yaml
+++ b/term7/functional_programming/lab1/package.yaml
@@ -1,14 +1,10 @@
-name:                lab1
+name:                Lab1
 version:             0.1.0.0
-github:              "SymphonyOfTranquility/Functional-programming"
+github:              "githubuser/lab1"
 license:             BSD3
-author:              "SymphonyOfTranquility"
+author:              "Author name here"
 maintainer:          "example@example.com"
-copyright:           "2021 SymphonyOfTranquility"
-
-extra-source-files:
-- README.md
-- ChangeLog.md
+copyright:           "2021 Author name here"
 
 # Metadata used when publishing your package
 # synopsis:            Short description of your package
@@ -17,25 +13,26 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/SymphonyOfTranquility/Functional-programming>
+description:         Please see the README on GitHub at <https://github.com/githubuser/lab1#readme>
 
 dependencies:
-- base >= 4.7 && < 5
-- mysql-haskell == 0.8.4.3
-- io-streams == 1.5.2.0
-- text == 1.2.4.0
-- time == 1.9.3
-- bytestring == 0.10.10.0
-- haskeline == 0.8.1.1
-- utf8-string == 1.0.2
-- binary == 0.8.7.0
-- pretty == 1.1.3.6
+- base
+- mysql-haskell
+- io-streams
+- text
+- time
+- bytestring
+- haskeline
+- utf8-string
+- binary
+- pretty
+- QuickCheck
 
 library:
   source-dirs: src
 
 executables:
-  lab1-exe:
+  Lab1-exe:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
@@ -43,10 +40,10 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - lab1
+    - Lab1
 
 tests:
-  lab1-test:
+  Lab1-test:
     main:                Spec.hs
     source-dirs:         test
     ghc-options:
@@ -54,4 +51,4 @@ tests:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - lab1
+    - Lab1
